#pragma once

/**
 * @interface IModel
 * @brief Interface for models.
 */
class IModel
{
public:
    virtual ~IModel() = default;
};
