#pragma once

/**
 * @interface IViewModel
 * @brief Interface for UI components.
 */
class IViewModel
{
public:
    virtual ~IViewModel() = default;
};
