#pragma once

#include "BaseView.hpp"

class PurchaseOrdersView : public BaseView
{
};
