@startuml

class SageStoreClient {
    -m_uiManager: UiManager
    -m_authorizationModel: AuthorizationModel
    ... <<other Models>>
}

class UiManager {
    -m_authorizationViewModel: DlgAuthorizationViewModel
    ... <<other ViewModels>>
    -m_authorizationView: DlgAuthorizationView
    ... <<other Views>>
}

interface IModel {
}

interface IViewModel {
}

interface BaseView {
}

interface IDialogModel{
}

interface BaseDialog {
}

class AuthorizationModel implements IModel {
}

class LoginDialogModel implements IDialogModel {
}

class LoginDialog implements BaseDialog {
}

class PurchaseOrdersModel implements IModel {
}

class PurchaseOrdersViewModel implements IViewModel {
}

class PurchaseOrdersView implements BaseView {
}

SageStoreClient "Manages"-->  UiManager
SageStoreClient "Manages"-->  AuthorizationModel
SageStoreClient "Manages"-->  PurchaseOrdersModel
UiManager --> "Manages" LoginDialogModel
UiManager --> "Manages" LoginDialog
UiManager --> "Manages" PurchaseOrdersViewModel
UiManager --> "Manages" PurchaseOrdersView

AuthorizationModel -[hidden]left- LoginDialogModel
LoginDialogModel -[hidden]left- LoginDialog
PurchaseOrdersModel -[hidden]right- PurchaseOrdersViewModel
PurchaseOrdersViewModel -[hidden]right- PurchaseOrdersView

@enduml
